# firecracker

./: CHANGELOG.md
docs/api_requests/: block-io-engine.md
src/api_server/: Cargo.toml
src/api_server/src/: lib.rs  parsed_request.rs
src/devices/src/virtio/: persist.rs
src/devices/src/virtio/block/: device.rs
src/dumbo/: Cargo.toml
src/firecracker/src/: main.rs
src/io_uring/: Cargo.toml
src/io_uring/src/queue/: mmap.rs
src/mmds/: Cargo.toml
src/vmm/: Cargo.toml
src/vmm/src/: lib.rs  persist.rs  rpc_interface.rs
src/vmm/src/device_manager/: persist.rs
tests/framework/: dependencies.txt  microvm.py
tests/integration_tests/functional/: test_api.py
tests/integration_tests/style/: test_rust.py
